fix 100vh bug on iOS

--- a/webapp/style.css
+++ b/webapp/style.css
@@ -106,7 +106,7 @@ body > * {
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     background-color: inherit;
     overflow: hidden;
 }
@@ -287,7 +287,7 @@ body > * {
     padding: 3vw 2vw;
 }
 #bcMain #bcBasket:before {
-    height: 10vw;
+    height: 10.5vw;
     width: 100vw;
     background-color: dodgerblue;
     content: 'Total : ' attr(data-number) ' articles';   
